[gd_scene load_steps=42 format=2]

[ext_resource path="res://sprite/book/Book4.png" type="Texture" id=1]
[ext_resource path="res://node/Spellbook/SpellBook.gd" type="Script" id=2]
[ext_resource path="res://sprite/book/BookSpawn25.png" type="Texture" id=3]
[ext_resource path="res://sprite/book/BookSpawn13.png" type="Texture" id=4]
[ext_resource path="res://sprite/book/BookSpawn3.png" type="Texture" id=5]
[ext_resource path="res://sprite/spell/SpellShootIcon.png" type="Texture" id=6]
[ext_resource path="res://sprite/book/BookSpawn7.png" type="Texture" id=7]
[ext_resource path="res://sprite/book/BookSpawn21.png" type="Texture" id=8]
[ext_resource path="res://sprite/book/BookSpawn18.png" type="Texture" id=9]
[ext_resource path="res://sprite/book/BookSpawn19.png" type="Texture" id=10]
[ext_resource path="res://sprite/book/BookSpawn22.png" type="Texture" id=11]
[ext_resource path="res://sprite/book/BookSpawn23.png" type="Texture" id=12]
[ext_resource path="res://sprite/book/BookSpawn24.png" type="Texture" id=13]
[ext_resource path="res://sprite/book/BookSpawn12.png" type="Texture" id=14]
[ext_resource path="res://sprite/book/BookSpawn17.png" type="Texture" id=15]
[ext_resource path="res://sprite/book/BookSpawn2.png" type="Texture" id=16]
[ext_resource path="res://sprite/book/BookSpawn5.png" type="Texture" id=17]
[ext_resource path="res://sprite/book/BookSpawn1.png" type="Texture" id=18]
[ext_resource path="res://sprite/book/BookSpawn6.png" type="Texture" id=19]
[ext_resource path="res://sprite/book/BookSpawn10.png" type="Texture" id=20]
[ext_resource path="res://sprite/book/BookSpawn11.png" type="Texture" id=21]
[ext_resource path="res://sprite/book/BookSpawn4.png" type="Texture" id=22]
[ext_resource path="res://sprite/book/BookSpawn14.png" type="Texture" id=23]
[ext_resource path="res://sprite/book/BookSpawn15.png" type="Texture" id=24]
[ext_resource path="res://sprite/book/BookSpawn8.png" type="Texture" id=25]
[ext_resource path="res://sprite/book/BookSpawn20.png" type="Texture" id=26]
[ext_resource path="res://sprite/book/BookSpawn9.png" type="Texture" id=27]
[ext_resource path="res://sprite/book/BookSpawn16.png" type="Texture" id=28]
[ext_resource path="res://shader/Outline.shader" type="Shader" id=29]
[ext_resource path="res://sprite/particle/2Particle-Sheet.png" type="Texture" id=30]
[ext_resource path="res://sprite/book/Book2.png" type="Texture" id=31]
[ext_resource path="res://sprite/book/Book3.png" type="Texture" id=32]
[ext_resource path="res://sprite/book/Book1.png" type="Texture" id=33]

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 29 )
shader_param/enabled = false
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 26 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 7 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 5 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": false,
"name": "consume",
"speed": 25.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 1 ) ],
"loop": true,
"name": "nearby",
"speed": 12.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 7 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 26 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 3 ) ],
"loop": false,
"name": "spawn",
"speed": 20.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "IconHide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "IconShow"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 14 ), Vector2( 0, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 9 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[node name="SpellBook" type="Node2D" groups=["book"]]
script = ExtResource( 2 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
material = SubResource( 7 )
position = Vector2( 0, 16 )
emitting = false
amount = 12
texture = ExtResource( 30 )
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2( 0, -1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.15
anim_speed = 1.0
anim_offset = 0.1
anim_offset_random = 1.0

[node name="BookSprite" type="AnimatedSprite" parent="."]
material = SubResource( 6 )
frames = SubResource( 1 )
animation = "nearby"
playing = true

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IconHide = SubResource( 8 )
anims/IconShow = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/float = SubResource( 4 )
next/IconShow = "float"

[node name="PickupRangeArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="PickupRange" type="CollisionShape2D" parent="PickupRangeArea"]
position = Vector2( 0, 8 )
shape = SubResource( 5 )

[connection signal="area_entered" from="PickupRangeArea" to="." method="_on_PickupRangeArea_area_entered"]
[connection signal="area_exited" from="PickupRangeArea" to="." method="_on_PickupRangeArea_area_exited"]
